# the_newsletter

./: .gitignore  Cargo.toml  Untitled  readme.md
.cargo/: config.toml
.github/workflows/: general.yml
scripts/: env_db.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  the_newsletter.code-workspace
src/routes/: subscriptions.rs
tests/: health_check.rs
