[package]
name = "the_newsletter"
version = "0.1.0"
authors = ["Luis Robles <luis@robles>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "the_newsletter"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
feature = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11.26"
